--- a/TreasureHunt/myyolo/templates/home.html
+++ b/TreasureHunt/myyolo/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+<{% extends 'base.html'%}
 {%block content %}
 
     <div class = "container">
@@ -16,3 +16,23 @@
     </div>
     {%endblock%}
 
+>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <div>
+        <h1> 제목 : {{blog.title}} </h1> <br>
+             날짜 : {{blog.pub_data}} <br>
+             본문 :  {{blog.summary}}<a href = "{%url 'detail' blog.id %}">...more</a> 
+             <br>
+        <br>
+    </div
+</body>
+</html>
